# PathTracing

./: .gitignore  AABB.hpp  B.ppm  BVH.hpp  CMakeLists.txt  Camera.hpp  DenoisedRenderedSceneTest.ppm  Film.hpp  Filter.hpp  Hit_record.hpp  Integrators.cpp  Integrators.hpp  Interaction.hpp  Light.cpp  Light.hpp  LightSampler.cpp  LightSampler.hpp  Material.hpp  Medium.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Onb.hpp  PhaseFunction.cpp  PhaseFunction.hpp  Primitive.cpp  Primitive.hpp  README.md  Random.hpp  Ray.hpp  RenderedSceneTest.ppm  ResourceManager.cpp  ResourceManager.hpp  Sampler.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  Texture.cpp  (+4 more)
examples/: example_1.cpp
pcg-cpp/: CONTRIBUTING.md  LICENSE.spdx
